# hydroponic_system

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
base/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_sensor.py  0003_alter_hydroponicsystem_num_of_chambers.py  0004_alter_hydroponicsystem_num_of_chambers.py
base/tests/: test_api.py  test_models.py  test_serializers.py
base/views/: auth.py  hydroponics.py  sensors.py
hydroponicsystem/: asgi.py  settings.py  urls.py  wsgi.py
hydroponicsystem/base/: admin.py  filters.py  models.py  pagination.py  serializers.py  validators.py
hydroponicsystem/base/migrations/: 0005_rename_activation_date_hydroponicsystem_activation_dt_and_more.py
hydroponicsystem/base/tests/: conftest.py  test_api.py
hydroponicsystem/base/views/: auth.py  hydroponics.py  sensors.py
hydroponicsystem/hydroponicsystem/: settings.py  urls.py
