[project]
name = "hydroponicsystem"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksandra Popek",email = "alepopek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref (==3.8.1)",
    "attrs (==25.1.0)",
    "colorama (==0.4.6)",
    "django (==5.1.6)",
    "django-filter (==25.1)",
    "djangorestframework (==3.15.2)",
    "djangorestframework-simplejwt (==5.4.0)",
    "drf-spectacular (==0.28.0)",
    "drf-spectacular-sidecar (==2025.2.1)",
    "drf-yasg (==1.21.8)",
    "inflection (==0.5.1)",
    "iniconfig (==2.0.0)",
    "jsonschema (==4.23.0)",
    "jsonschema-specifications (==2024.10.1)",
    "packaging (==24.2)",
    "pluggy (==1.5.0)",
    "psycopg2-binary (==2.9.10)",
    "pyjwt (==2.10.1)",
    "pytest (==8.3.4)",
    "pytest-django (==4.10.0)",
    "python-dotenv (==1.0.1)",
    "pytz (==2025.1)",
    "pyyaml (==6.0.2)",
    "referencing (==0.36.2)",
    "rpds-py (==0.22.3)",
    "sqlparse (==0.5.3)",
    "typing-extensions (==4.12.2)",
    "tzdata (==2025.1)",
    "uritemplate (==4.1.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"